apps/devenv/overlays/ssh-native/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sshd
  namespace: devenv
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`*`)
      services:
        - name: sshd
          port: 22
